k8s/base/frontend.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-angular
  namespace: apps
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  selector:
    matchLabels:
      app: frontend-angular
  template:
    metadata:
      labels:
        app: frontend-angular
    spec:
      containers:
      - name: angular-ui
        image: docker.io/yourhubusername/frontend-angular:latest
        ports:
        - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: frontend-service
  namespace: apps
spec:
  type: ClusterIP
  ports:
  - port: 80
    targetPort: 80
  selector:
    app: frontend-angular
