k8s/base/kafka.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: kafka-broker
  namespace: apps
spec:
  replicas: 1
  selector:
    matchLabels:
      app: kafka
  template:
    metadata:
      labels:
        app: kafka
    spec:
      containers:
      - name: zookeeper
        image: wurstmeister/zookeeper
        ports:
        - containerPort: 2181
      - name: kafka
        image: wurstmeister/kafka
        ports:
        - containerPort: 9092
---
apiVersion: v1
kind: Service
metadata:
  name: kafka-service
  namespace: apps
spec:
  ports:
  - port: 9092
  selector:
    app: kafka
