k8s/base/postgres.yml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres-db
  namespace: apps
spec:
  serviceName: "postgres-service"
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
      - name: postgres
        image: postgres:15-alpine
        ports:
        - containerPort: 5432
          name: dbport
---
apiVersion: v1
kind: Service
metadata:
  name: postgres-service
  namespace: apps
spec:
  ports:
  - port: 5432
  selector:
    app: postgres
